--- a/.github/workflows/build-pull-request.yml
+++ b/.github/workflows/build-pull-request.yml
@@ -4,12 +4,6 @@ on:
   workflow_dispatch:
     inputs:
       repo_name:
-        description: "Repository Name (owner/name)
-
-on:
-  workflow_dispatch:
-    inputs:
-      repo_name:
         description: "Repository Name (owner/repo)"
         required: true
       tag_name:
@@ -17,10 +11,14 @@ on:
         required: true
       release:
         description: "Create a release branch"
+        required: false
         type: boolean
+        default: false
       hotfix:
         description: "Create a hotfix branch"
+        required: false
         type: boolean
+        default: false
 
 permissions:
   contents: write
@@ -32,9 +30,8 @@ jobs:
 
     steps:
       - name: Validate Repository Name
-        env:
-          REPOSITORY: ${{ github.event.inputs.repo_name }}
         run: |
+          REPOSITORY="${{ github.event.inputs.repo_name }}"
           if [[ ! "$REPOSITORY" == */* ]]; then
             echo "❌ ERROR: Repository name must be in 'owner/repo' format."
             exit 1
@@ -56,7 +53,6 @@ jobs:
           REPO_NAME=$(basename "${{ github.event.inputs.repo_name }}")
           cd $REPO_NAME
 
-          # Ensure develop branch exists and is up to date
           if git rev-parse --verify origin/develop >/dev/null 2>&1; then
             git fetch origin develop
             git checkout develop
@@ -65,14 +61,13 @@ jobs:
             echo "⚠️ No 'develop' branch found, skipping checkout."
           fi
 
-          # Create and push the tag
           latest_commit=$(git rev-parse HEAD)
           git tag "$TAG_NAME" "$latest_commit"
           git push origin --tags
           echo "✅ Tagged latest commit with $TAG_NAME"
 
       - name: Create Release Branch and PR (if selected)
-        if: github.event.inputs.release == 'true'
+        if: ${{ github.event.inputs.release }}
         env:
           GH_TOKEN: ${{ secrets.PAT_TOKEN }}
         run: |
@@ -92,11 +87,11 @@ jobs:
             --body "This is an automated release PR for $release_branch" \
             --assignee "${{ github.actor }}" \
             --reviewer "${{ github.actor }}" \
-            --auth-token "${GH_TOKEN}" \
+            --token "${GH_TOKEN}" \
             || { echo "❌ PR creation failed for $release_branch"; exit 1; }
 
       - name: Create Hotfix Branch and PR (if selected)
-        if: github.event.inputs.hotfix == 'true'
+        if: ${{ github.event.inputs.hotfix }}
         env:
           GH_TOKEN: ${{ secrets.PAT_TOKEN }}
         run: |
@@ -116,119 +111,5 @@ jobs:
             --body "This is an automated hotfix PR for $hotfix_branch" \
             --assignee "${{ github.actor }}" \
             --reviewer "${{ github.actor }}" \
-            --auth-token "${GH_TOKEN}" \
-            || { echo "❌ PR creation failed for $hotfix_branch"; exit 1; }
-repo)"
-        required: true
-      tag_name:
-        description: "Tag name to apply"
-        required: true
-      release:
-        description: "Create a release branch"
-        type: boolean
-      hotfix:
-        description: "Create a hotfix branch"
-        type: boolean
-
-permissions:
-  contents: write
-  pull-requests: write
-
-jobs:
-  process-repo:
-    runs-on: ubuntu-latest
-
-    steps:
-      - name: Validate Repository Name
-        env:
-          REPOSITORY: ${{ github.event.inputs.repo_name }}
-        run: |
-          if [[ ! "$REPOSITORY" == */* ]]; then
-            echo "❌ ERROR: Repository name must be in 'owner/repo' format."
-            exit 1
-          fi
-
-      - name: Authenticate GitHub CLI
-        env:
-          GH_TOKEN: ${{ secrets.PAT_TOKEN }}
-        run: |
-          echo "🔑 Logging into GitHub CLI..."
-          echo $GH_TOKEN | gh auth login --with-token
-          gh auth status || { echo "❌ GitHub CLI authentication failed"; exit 1; }
-
-      - name: Clone Repository
-        env:
-          REPOSITORY: ${{ github.event.inputs.repo_name }}
-          GH_TOKEN: ${{ secrets.PAT_TOKEN }}
-        run: |
-          echo "🚀 Cloning repository: $REPOSITORY"
-          git clone https://x-access-token:${GH_TOKEN}@github.com/$REPOSITORY.git || { echo "❌ Repository not found!"; exit 1; }
-          cd $(basename "$REPOSITORY")
-
-      - name: Tag the Latest Commit
-        env:
-          TAG_NAME: ${{ github.event.inputs.tag_name }}
-        run: |
-          REPO_NAME=$(basename "${{ github.event.inputs.repo_name }}")
-          cd $REPO_NAME
-
-          # Ensure develop branch exists and is up to date
-          if git rev-parse --verify origin/develop >/dev/null 2>&1; then
-            git fetch origin develop
-            git checkout develop
-            git pull origin develop
-          else
-            echo "⚠️ No 'develop' branch found, skipping checkout."
-          fi
-
-          # Create and push the tag
-          latest_commit=$(git rev-parse HEAD)
-          git tag "$TAG_NAME" "$latest_commit"
-          git push origin --tags
-          echo "✅ Tagged latest commit with $TAG_NAME"
-
-      - name: Create Release Branch and PR (if selected)
-        if: github.event.inputs.release == 'true'
-        env:
-          GH_TOKEN: ${{ secrets.PAT_TOKEN }}
-        run: |
-          REPO_NAME=$(basename "${{ github.event.inputs.repo_name }}")
-          cd $REPO_NAME
-
-          release_branch="release-$(date +%Y%m%d)"
-          git checkout -b "$release_branch"
-          git push origin "$release_branch"
-          echo "🚀 Created release branch: $release_branch"
-
-          # Create PR for Release Branch
-          echo "🔄 Creating PR for release branch..."
-          gh pr create --repo "${{ github.event.inputs.repo_name }}" \
-            --head "$release_branch" --base develop \
-            --title "Release: $release_branch" \
-            --body "This is an automated release PR for $release_branch" \
-            --assignee "${{ github.actor }}" \
-            --reviewer "${{ github.actor }}" \
-            || { echo "❌ PR creation failed for $release_branch"; exit 1; }
-
-      - name: Create Hotfix Branch and PR (if selected)
-        if: github.event.inputs.hotfix == 'true'
-        env:
-          GH_TOKEN: ${{ secrets.PAT_TOKEN }}
-        run: |
-          REPO_NAME=$(basename "${{ github.event.inputs.repo_name }}")
-          cd $REPO_NAME
-
-          hotfix_branch="hotfix-$(date +%Y%m%d)"
-          git checkout -b "$hotfix_branch"
-          git push origin "$hotfix_branch"
-          echo "🔥 Created hotfix branch: $hotfix_branch"
-
-          # Create PR for Hotfix Branch
-          echo "🔄 Creating PR for hotfix branch..."
-          gh pr create --repo "${{ github.event.inputs.repo_name }}" \
-            --head "$hotfix_branch" --base develop \
-            --title "Hotfix: $hotfix_branch" \
-            --body "This is an automated hotfix PR for $hotfix_branch" \
-            --assignee "${{ github.actor }}" \
-            --reviewer "${{ github.actor }}" \
+            --token "${GH_TOKEN}" \
             || { echo "❌ PR creation failed for $hotfix_branch"; exit 1; }
