--- a/.github/workflows/build-pull-request.yml
+++ b/.github/workflows/build-pull-request.yml
@@ -33,7 +33,13 @@ jobs:
             echo "❌ ERROR: Repository name must be in 'owner/repo' format."
             exit 1
           fi
-
+      - name: Authenticate GitHub CLI
+        env:
+          GH_TOKEN: ${{ secrets.PAT_TOKEN }}  # Ensure this is a valid Personal Access Token (PAT)
+        run: |
+          echo "🔑 Logging into GitHub CLI..."
+          gh auth logout || true
+          gh auth status || echo "✅ Using GH_TOKEN for authentication"
       - name: Clone Repository
         env:
           REPOSITORY: ${{ github.event.inputs.repo_name }}
@@ -42,25 +48,25 @@ jobs:
           echo "🚀 Cloning repository: $REPOSITORY"
           git clone https://x-access-token:${GH_TOKEN}@github.com/$REPOSITORY.git || { echo "❌ Repository not found!"; exit 1; }
           cd $(basename "$REPOSITORY")
-
       - name: Tag the Latest Commit
         env:
           TAG_NAME: ${{ github.event.inputs.tag_name }}
         run: |
           REPO_NAME=$(basename "${{ github.event.inputs.repo_name }}")
           cd $REPO_NAME
-
-          # Ensure develop branch is checked out and up to date
-          git fetch origin develop
-          git checkout develop
-          git pull origin develop
-
+          # Ensure develop branch exists and is up to date
+          if git rev-parse --verify origin/develop >/dev/null 2>&1; then
+            git fetch origin develop
+            git checkout develop
+            git pull origin develop
+          else
+            echo "⚠️ No 'develop' branch found, skipping checkout."
+          fi
           # Create and push the tag
           latest_commit=$(git rev-parse HEAD)
           git tag "$TAG_NAME" "$latest_commit"
           git push origin --tags
           echo "✅ Tagged latest commit with $TAG_NAME"
-
       - name: Create Release Branch (if selected)
         if: github.event.inputs.release == 'true'
         env:
@@ -68,35 +74,30 @@ jobs:
         run: |
           REPO_NAME=$(basename "${{ github.event.inputs.repo_name }}")
           cd $REPO_NAME
-
           release_branch="release-$(date +%Y%m%d)"
           git checkout -b "$release_branch"
           git push origin "$release_branch"
           echo "🚀 Created release branch: $release_branch"
-
-      - name: Authenticate with GitHub CLI
-        env:
-          GH_TOKEN: ${{ secrets.PAT_TOKEN }}
-        run: |
-          echo "🔑 Logging into GitHub CLI..."
-          echo "${GH_TOKEN}" | gh auth login --with-token
-          gh auth status || { echo "❌ GitHub CLI authentication failed"; exit 1; }
-
-      - name: Create Pull Request for Release Branch
-        if: github.event.inputs.release == 'true'
+          # Create PR for Release Branch
+          gh pr create --repo "${{ github.event.inputs.repo_name }}" \
+            --head "$release_branch" --base develop \
+            --title "Release: $release_branch" \
+            --body "This is an automated release PR for $release_branch" \
+            --assignee "${{ github.actor }}" || echo "❌ PR creation failed for $release_branch"
+      - name: Create Hotfix Branch (if selected)
+        if: github.event.inputs.hotfix == 'true'
         env:
           GH_TOKEN: ${{ secrets.PAT_TOKEN }}
         run: |
           REPO_NAME=$(basename "${{ github.event.inputs.repo_name }}")
           cd $REPO_NAME
-
-          release_branch="release-$(date +%Y%m%d)"
-          echo "🔄 Creating PR for release branch..."
-
+          hotfix_branch="hotfix-$(date +%Y%m%d)"
+          git checkout -b "$hotfix_branch"
+          git push origin "$hotfix_branch"
+          echo "🔥 Created hotfix branch: $hotfix_branch"
+          # Create PR for Hotfix Branch
           gh pr create --repo "${{ github.event.inputs.repo_name }}" \
-            --head "$release_branch" --base develop \
-            --title "Release: $release_branch" \
-            --body "This is an automated release PR for $release_branch" \
-            --assignee "sarthaksharma22" \
-            --reviewer "sarthaksharma22" \
-            || { echo "❌ PR creation failed for $release_branch"; exit 1; }
+            --head "$hotfix_branch" --base develop \
+            --title "Hotfix: $hotfix_branch" \
+            --body "This is an automated hotfix PR for $hotfix_branch" \
+            --assignee "${{ github.actor }}" || echo "❌ PR creation failed for $hotfix_branch"
