--- a/.github/workflows/build-pull-request.yml
+++ b/.github/workflows/build-pull-request.yml
@@ -26,10 +26,8 @@ jobs:
 
     steps:
       - name: Validate Repository Name
-        env:
-          REPOSITORY: ${{ github.event.inputs.repo_name }}
         run: |
-          if [[ ! "$REPOSITORY" == */* ]]; then
+          if [[ ! "${{ github.event.inputs.repo_name }}" == */* ]]; then
             echo "❌ ERROR: Repository name must be in 'owner/repo' format."
             exit 1
           fi
@@ -39,85 +37,66 @@ jobs:
           GH_TOKEN: ${{ secrets.PATT_TOKEN }}
         run: |
           echo "🔑 Logging into GitHub CLI..."
-          gh auth logout || true
-          echo "${GH_TOKEN}" | gh auth login --with-token
-          gh auth status || { echo "❌ Authentication failed!"; exit 1; }
+          gh auth status || echo "✅ Using GH_TOKEN for authentication"
 
       - name: Clone Repository
         env:
-          REPOSITORY: ${{ github.event.inputs.repo_name }}
           GH_TOKEN: ${{ secrets.PATT_TOKEN }}
         run: |
-          echo "🚀 Cloning repository: $REPOSITORY"
-          git clone https://x-access-token:${GH_TOKEN}@github.com/$REPOSITORY.git || { echo "❌ Repository not found!"; exit 1; }
-          cd $(basename "$REPOSITORY")
+          echo "🚀 Cloning repository: ${{ github.event.inputs.repo_name }}"
+          git clone https://x-access-token:${GH_TOKEN}@github.com/${{ github.event.inputs.repo_name }}.git
+          cd $(basename "${{ github.event.inputs.repo_name }}")
 
       - name: Tag the Latest Commit
-        env:
-          TAG_NAME: ${{ github.event.inputs.tag_name }}
         run: |
           REPO_NAME=$(basename "${{ github.event.inputs.repo_name }}")
           cd $REPO_NAME
-
-          # Ensure develop branch exists and is up to date
-          if git rev-parse --verify origin/develop >/dev/null 2>&1; then
-            git fetch origin develop
-            git checkout develop
-            git pull origin develop
-          else
-            echo "⚠️ No 'develop' branch found, skipping checkout."
-          fi
-
-          # Create and push the tag
+          
+          git fetch origin develop || echo "⚠️ No 'develop' branch found."
+          git checkout develop || echo "⚠️ No 'develop' branch found. Using default branch."
+          git pull origin develop || echo "⚠️ Unable to pull 'develop'."
+          
           latest_commit=$(git rev-parse HEAD)
-          git tag "$TAG_NAME" "$latest_commit"
+          git tag "${{ github.event.inputs.tag_name }}" "$latest_commit"
           git push origin --tags
-          echo "✅ Tagged latest commit with $TAG_NAME"
+          echo "✅ Tagged latest commit with ${{ github.event.inputs.tag_name }}"
 
       - name: Create Release Branch (if selected)
         if: github.event.inputs.release == 'true'
-        env:
-          GH_TOKEN: ${{ secrets.PATT_TOKEN }}
         run: |
           REPO_NAME=$(basename "${{ github.event.inputs.repo_name }}")
           cd $REPO_NAME
-
+          
           release_branch="release-$(date +%Y%m%d)"
           git checkout -b "$release_branch"
           git push origin "$release_branch"
           echo "🚀 Created release branch: $release_branch"
-
-          # Verify PR creation is possible
-          gh pr view --repo "${{ github.event.inputs.repo_name }}" "$release_branch" --json title || {
+          
+          if ! gh pr view --repo "${{ github.event.inputs.repo_name }}" "$release_branch" --json title; then
             echo "🔄 Creating PR for release branch..."
             gh pr create --repo "${{ github.event.inputs.repo_name }}" \
               --head "$release_branch" --base develop \
               --title "Release: $release_branch" \
               --body "This is an automated release PR for $release_branch" \
-              --assignee "${{ github.actor }}" \
-              || { echo "❌ PR creation failed for $release_branch"; exit 1; }
-          }
+              --assignee "${{ github.actor }}"
+          fi
 
       - name: Create Hotfix Branch (if selected)
         if: github.event.inputs.hotfix == 'true'
-        env:
-          GH_TOKEN: ${{ secrets.PATT_TOKEN }}
         run: |
           REPO_NAME=$(basename "${{ github.event.inputs.repo_name }}")
           cd $REPO_NAME
-
+          
           hotfix_branch="hotfix-$(date +%Y%m%d)"
           git checkout -b "$hotfix_branch"
           git push origin "$hotfix_branch"
           echo "🔥 Created hotfix branch: $hotfix_branch"
-
-          # Verify PR creation is possible
-          gh pr view --repo "${{ github.event.inputs.repo_name }}" "$hotfix_branch" --json title || {
+          
+          if ! gh pr view --repo "${{ github.event.inputs.repo_name }}" "$hotfix_branch" --json title; then
             echo "🔄 Creating PR for hotfix branch..."
             gh pr create --repo "${{ github.event.inputs.repo_name }}" \
               --head "$hotfix_branch" --base develop \
               --title "Hotfix: $hotfix_branch" \
               --body "This is an automated hotfix PR for $hotfix_branch" \
-              --assignee "${{ github.actor }}" \
-              || { echo "❌ PR creation failed for $hotfix_branch"; exit 1; }
-          }
+              --assignee "${{ github.actor }}"
+          fi
